...
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/format_ui" />

                <TextView
...
                    android:layout_weight="1"
                    android:textColor="#222222"
                    android:text="@string/json_ui" />
            </LinearLayout>

...
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/application_id_ui" />

                <EditText
                    android:id="@+id/appid_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/user_id_ui" />

                <EditText
                    android:id="@+id/uid_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/locale_ui" />

                <Spinner
                    android:id="@+id/locale_spinner"
                    style="@style/Widget.AppCompat.Spinner"
                    android:layout_width="0dp"
...
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/os_version_ui" />

                <TextView
                    android:id="@+id/os_version_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/google_ad_id_ui" />

                <TextView
                    android:id="@+id/google_ad_id_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/limited_tracking_enabled_ui" />

                <CheckBox
                    android:id="@+id/google_ad_id_limited_tracking_enabled_check_box"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/optional_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/ip_ui" />

                <EditText
...

                <CheckBox
                    android:id="@+id/ip_check_box"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/custom_parameters_ui" />

                <EditText
...

                <CheckBox
                    android:id="@+id/pub0_check_box"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/page_ui" />

                <EditText
...

                <CheckBox
                    android:id="@+id/page_check_box"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/offer_types_ui" />

                <EditText
...

                <CheckBox
                    android:id="@+id/offer_types_check_box"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/ps_time_ui" />

                <TextView
...

                <CheckBox
                    android:id="@+id/ps_time_check_box"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/device_ui" />

                <TextView
...

    <Button
        android:id="@+id/request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
